--- a/src/styles/components/TechnologiesContainer.sass
+++ b/src/styles/components/TechnologiesContainer.sass
@@ -24,6 +24,7 @@
 
       svg
         font-size: 6rem
+        min-width: 3rem
 
   #html
     svg
@@ -48,4 +49,12 @@
   #react
     svg
       color: #61dbfb
+
+  #python
+    svg
+      color: #3776ab
+
+  #git
+    svg
+      color: #f34f26
 
